nova_tests/plan131/neg/alloc_basic_pos.nv
// Plan 131 Ф.1 — RawMem.alloc basic round-trip.
// Allocate 8 bytes, write a u8 value, read back.
// EXPECT_OUTPUT: ok

module neg.alloc_basic_pos

import std.runtime.raw_mem.{RawMem}

fn main() -> () {
    unsafe {
        // Allocate 8 bytes of GC-tracked zeroed memory.
        mut p = RawMem.alloc(8)
        // Write a value through the *mut u8 pointer.
        *p = 42 as u8
        // Read back and verify.
        ro v = *p
        assert(v as int == 42)
    }
    println("ok")
}
